Fix warnings introduced in 264411@main https://bugs.webkit.org/show_bug.cgi?id=257359

Reviewed by Don Olmstead.

Use `PRIu64` when printing out `uint64_t` values.

* Source/WebCore/workers/service/context/SWContextManager.cpp:
(WebCore::SWContextManager::fireInstallEvent):
(WebCore::SWContextManager::fireActivateEvent):
(WebCore::SWContextManager::firePushEvent):
(WebCore::SWContextManager::firePushSubscriptionChangeEvent):
(WebCore::SWContextManager::fireNotificationEvent):
(WebCore::SWContextManager::fireBackgroundFetchEvent):
(WebCore::SWContextManager::fireBackgroundFetchClickEvent):
(WebCore::SWContextManager::terminateWorker):

Canonical link: https://commits.webkit.org/264764@main