Source/WebCore/workers/service/context/SWContextManager.cpp
@@ -102,7 +102,7 @@ void SWContextManager::fireInstallEvent(ServiceWorkerIdentifier identifier)
 {
     auto* serviceWorker = serviceWorkerThreadProxy(identifier);
     if (!serviceWorker) {
-        RELEASE_LOG_ERROR(ServiceWorker, "SWContextManager::fireInstallEvent but service worker %llu not found", identifier.toUInt64());
+        RELEASE_LOG_ERROR(ServiceWorker, "SWContextManager::fireInstallEvent but service worker %" PRIu64 " not found", identifier.toUInt64());
         return;
     }
 
@@ -113,7 +113,7 @@ void SWContextManager::fireActivateEvent(ServiceWorkerIdentifier identifier)
 {
     auto* serviceWorker = serviceWorkerThreadProxy(identifier);
     if (!serviceWorker) {
-        RELEASE_LOG_ERROR(ServiceWorker, "SWContextManager::fireActivateEvent but service worker %llu not found", identifier.toUInt64());
+        RELEASE_LOG_ERROR(ServiceWorker, "SWContextManager::fireActivateEvent but service worker %" PRIu64 " not found", identifier.toUInt64());
         return;
     }
 
@@ -124,7 +124,7 @@ void SWContextManager::firePushEvent(ServiceWorkerIdentifier identifier, std::op
 {
     auto* serviceWorker = serviceWorkerThreadProxy(identifier);
     if (!serviceWorker) {
-        RELEASE_LOG_ERROR(ServiceWorker, "SWContextManager::firePushEvent but service worker %llu not found", identifier.toUInt64());
+        RELEASE_LOG_ERROR(ServiceWorker, "SWContextManager::firePushEvent but service worker %" PRIu64 " not found", identifier.toUInt64());
         callback(false);
         return;
     }
@@ -136,7 +136,7 @@ void SWContextManager::firePushSubscriptionChangeEvent(ServiceWorkerIdentifier i
 {
     auto* serviceWorker = serviceWorkerThreadProxy(identifier);
     if (!serviceWorker) {
-        RELEASE_LOG_ERROR(ServiceWorker, "SWContextManager::firePushSubscriptionChangeEvent but service worker %llu not found", identifier.toUInt64());
+        RELEASE_LOG_ERROR(ServiceWorker, "SWContextManager::firePushSubscriptionChangeEvent but service worker %" PRIu64 " not found", identifier.toUInt64());
         return;
     }
 
@@ -147,7 +147,7 @@ void SWContextManager::fireNotificationEvent(ServiceWorkerIdentifier identifier,
 {
     auto* serviceWorker = serviceWorkerThreadProxy(identifier);
     if (!serviceWorker) {
-        RELEASE_LOG_ERROR(ServiceWorker, "SWContextManager::fireNotificationEvent but service worker %llu not found", identifier.toUInt64());
+        RELEASE_LOG_ERROR(ServiceWorker, "SWContextManager::fireNotificationEvent but service worker %" PRIu64 " not found", identifier.toUInt64());
         callback(false);
         return;
     }
@@ -159,7 +159,7 @@ void SWContextManager::fireBackgroundFetchEvent(ServiceWorkerIdentifier identifi
 {
     auto* serviceWorker = serviceWorkerThreadProxy(identifier);
     if (!serviceWorker) {
-        RELEASE_LOG_ERROR(ServiceWorker, "SWContextManager::fireBackgroundFetchEvent but service worker %llu not found", identifier.toUInt64());
+        RELEASE_LOG_ERROR(ServiceWorker, "SWContextManager::fireBackgroundFetchEvent but service worker %" PRIu64 " not found", identifier.toUInt64());
         callback(false);
         return;
     }
@@ -171,7 +171,7 @@ void SWContextManager::fireBackgroundFetchClickEvent(ServiceWorkerIdentifier ide
 {
     auto* serviceWorker = serviceWorkerThreadProxy(identifier);
     if (!serviceWorker) {
-        RELEASE_LOG_ERROR(ServiceWorker, "SWContextManager::fireBackgroundFetchClickEvent but service worker %llu not found", identifier.toUInt64());
+        RELEASE_LOG_ERROR(ServiceWorker, "SWContextManager::fireBackgroundFetchClickEvent but service worker %" PRIu64 " not found", identifier.toUInt64());
         callback(false);
         return;
     }
@@ -181,7 +181,7 @@ void SWContextManager::fireBackgroundFetchClickEvent(ServiceWorkerIdentifier ide
 
 void SWContextManager::terminateWorker(ServiceWorkerIdentifier identifier, Seconds timeout, Function<void()>&& completionHandler)
 {
-    RELEASE_LOG(ServiceWorker, "SWContextManager::terminateWorker %llu", identifier.toUInt64());
+    RELEASE_LOG(ServiceWorker, "SWContextManager::terminateWorker %" PRIu64, identifier.toUInt64());
 
     RefPtr<ServiceWorkerThreadProxy> serviceWorker;
     {
